argo/examples/ci/webhook/gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway-http
  labels:
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    gateway-name: "webhook-gateway-http"
spec:
  configMap: webhook-gateway-configmap
  type: "webhook"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  eventVersion: "1.0"
  deploySpec:
    metadata:
      name: webhook-gateway-http
      labels:
        gateway-name: webhook-gateway-http
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client"
          command: ["/bin/gateway-client"]
        - name: "webhook-events"
          image: "argoproj/webhook-gateway"
          command: ["/bin/webhook-gateway"]
      serviceAccountName: webhook-gateway-http
  serviceSpec:
    metadata:
      name: webhook-gateway-http
    spec:
      selector:
        gateway-name: webhook-gateway-http
      ports:
        - port: 80
  watchers:
    sensors:
      - name: "github-sensor"
